[package]
description = "An experimental game server using voxelize"
edition = "2021"
license = "TBD"
name = "antserve"
version = "0.0.1"

[[bin]]
name = "antserve"
path = "main.rs"

[dependencies]
actix = "0.13"
actix-cors = "0.6.1"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"
log = "0.4.16"
kdtree = "0.7.0"
nanoid = "0.4.0"
noise = "0.8.2"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
specs = {version = "0.18.0", features = ["specs-derive", "serde"]}
voxelize = { path = "../voxelize" }

